# tamandua-ctl

./: .gitignore  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md
.github/workflows/: ci.yml
src/: cli.rs  main.rs  output.rs
src/commands/: alerts.rs  config.rs  events.rs  mod.rs  quarantine.rs  remote.rs  response.rs  scan.rs  status.rs  version.rs
src/ipc/: mod.rs  protocol.rs
