[package]
name = "tamandua-ctl"
version = "0.1.0"
description = "Tamandua EDR command-line control tool"
authors = ["Tamandua Team"]
license = "Apache-2.0"
repository = "https://github.com/treant-lab/tamandua-ctl"
edition = "2021"

[[bin]]
name = "tamandua-ctl"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive", "env", "color"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23", default-features = false, features = ["connect", "native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
webbrowser = "1"

# IPC protocol (MessagePack, same as Agent)
rmp-serde = "1.3"
bytes = "1.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Terminal output
colored = "2"
tabled = "0.15"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Hashing for token auth
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

[target.'cfg(windows)'.dependencies]
tokio = { version = "1", features = ["full", "net"] }

[target.'cfg(unix)'.dependencies]
tokio = { version = "1", features = ["full", "net"] }
